Refactor AlgorithmServiceImpl and DemoApplication: update print statements to use toString() and simplify stream collection